[package]
name = "move-stdlib"
version = "0.1.1"
edition = "2021"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem stdlib"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# Crates.io
hex = { version = "0.4", default-features = false }
log = { version = "0.4", optional = true }
sha2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }
smallvec = { version = "1.11", default-features = false }

# substrate-move
move-binary-format = { git = "https://github.com/eigerco/substrate-move", default-features = false }
move-command-line-common = { git = "https://github.com/eigerco/substrate-move", optional = true }
move-compiler = { git = "https://github.com/eigerco/substrate-move", optional = true }
move-core-types = { git = "https://github.com/eigerco/substrate-move", default-features = false }
move-docgen = { git = "https://github.com/eigerco/substrate-move", optional = true }
move-errmapgen = { git = "https://github.com/eigerco/substrate-move", optional = true }
move-prover = { git = "https://github.com/eigerco/substrate-move", optional = true }
move-vm-types = { git = "https://github.com/eigerco/substrate-move", default-features = false }
move-vm-runtime = { git = "https://github.com/eigerco/substrate-move", default-features = false }

[dev-dependencies]
# crates.io
anyhow = "1.0"
file_diff = "1.0"
tempfile = "3.8"
walkdir = "2.4"

# substrate-move
move-cli = { git = "https://github.com/eigerco/substrate-move" }
move-package = { git = "https://github.com/eigerco/substrate-move" }
move-unit-test = { git = "https://github.com/eigerco/substrate-move" }

[features]
default = ["std", "address32"]
stdlib-bytecode = []
testing = []
address20 = ["move-core-types/address20"]
address32 = ["move-core-types/address32"]
std = [
    "hex/std",
    "log/std",
    "move-binary-format/std",
    "move-command-line-common",
    "move-compiler",
    "move-core-types/std",
    "move-docgen",
    "move-errmapgen",
    "move-prover",
    "move-vm-types/std",
    "move-vm-runtime/std",
]

